terms SEO update

--- a/terms.html
+++ b/terms.html
@@ -5,6 +5,17 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Terms — SureWhyNot</title>
+
+  <!-- SEO -->
+  <meta name="description" content="Terms and Conditions for SureWhyNot. Usage rules, tool output limitations, browser game policies, advertising disclosures, and liability limitations." />
+  <meta name="robots" content="index,follow" />
+  <link rel="canonical" href="https://surewhynot.app/terms.html" />
+
+  <meta property="og:title" content="Terms — SureWhyNot" />
+  <meta property="og:description" content="Usage terms covering site use, tool output, browser games, advertising, and liability limitations." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://surewhynot.app/terms.html" />
+
   <link rel="stylesheet" href="/assets/site.css">
   
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7167291111213614"
@@ -15,6 +26,16 @@
   <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
   <link rel="manifest" href="/site.webmanifest">	 
+
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebPage",
+  "name": "Terms and Conditions — SureWhyNot",
+  "url": "https://surewhynot.app/terms.html",
+  "description": "Terms and Conditions outlining usage rules, tool limitations, game policies, advertising disclosures, and liability limitations."
+}
+</script>
 	 
 </head>
 
@@ -23,13 +44,17 @@
 
     <div id="site-header"></div>
 
-
     <main>
       <div class="wrap">
         <section class="grid" style="grid-template-columns:1fr;">
           <div class="card">
             <div class="pad">
-              <div class="h1">Terms and Conditions</div>
+
+              <h1 class="h1" style="margin:0;">Terms and Conditions</h1>
+              <h2 class="muted" style="margin:2px 0 0 0;font-size:12px;font-weight:normal;">
+                Site usage rules, tool limitations, game policies, and liability terms.
+              </h2>
+
               <div class="muted">
 
                 By using surewhynot.app, you agree to the following terms.
