uuis SEO update

--- a/uuid-generator.html
+++ b/uuid-generator.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
 
-  <!-- Start cookieyes banner --> 
-   <script id="cookieyes" async type="text/javascript" src="https://cdn-cookieyes.com/client_data/b0872fcf9e2c426859698b10be285be4/script.js"></script> 
+  <!-- Start cookieyes banner -->
+   <script id="cookieyes" async type="text/javascript" src="https://cdn-cookieyes.com/client_data/b0872fcf9e2c426859698b10be285be4/script.js"></script>
   <!-- End cookieyes banner -->
-  
-  
+
+
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -29,7 +29,7 @@
     "applicationCategory": "DeveloperApplication",
     "operatingSystem": "Web",
     "url": "https://surewhynot.app/uuid-generator.html",
-    "description": "Free UUID generator and validator. Generate UUID v4, v5, and v7. Bulk generate, search, sort, copy, and export TXT/CSV. Runs locally in the browser."
+    "description": "Free UUID generator and validator. Generate UUID v4 (random), v5 (namespace+name), and v7 (time-ordered). Bulk generate, search, sort, copy, and export TXT/CSV. Runs locally in your browser — no uploads."
   }
   </script>
 
@@ -92,10 +92,10 @@ tbody#rows .actions .pill {
 }
 
   </style>
-  
+
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7167291111213614"
      crossorigin="anonymous"></script>
-	 
+
 </head>
 
 <body>
@@ -108,11 +108,12 @@ tbody#rows .actions .pill {
 
           <div class="card">
             <div class="pad">
-              <div class="h1">UUID Generator + Validator</div>
 
-              <div class="muted" style="margin-top:10px">
+              <!-- SEO headings (same look as your existing .h1 + .muted blocks) -->
+              <h1 class="h1" style="margin:0; font-size:inherit; font-weight:inherit;">UUID Generator + Validator</h1>
+              <h2 class="muted" style="margin:10px 0 0 0; font-size:inherit; font-weight:normal;">
                 Generate UUIDs locally: v4 (random), v5 (namespace+name), v7 (time-ordered). Bulk generate, search, sort, copy, and export.
-              </div>
+              </h2>
 
               <div class="hr"></div>
 
@@ -176,7 +177,7 @@ tbody#rows .actions .pill {
 
           <div class="card">
             <div class="pad">
-              <div class="h1">Generated UUIDs</div>
+              <h2 class="h1" style="margin:0; font-size:inherit; font-weight:inherit;">Generated UUIDs</h2>
 
               <div class="row" style="margin-top:10px">
                 <div class="col">
