hash gen SEO update

--- a/hash-generator.html
+++ b/hash-generator.html
@@ -2,22 +2,28 @@
 <html lang="en">
 <head>
 
-  <!-- Start cookieyes banner --> 
-   <script id="cookieyes" async type="text/javascript" src="https://cdn-cookieyes.com/client_data/b0872fcf9e2c426859698b10be285be4/script.js"></script> 
+  <!-- Start cookieyes banner -->
+  <script id="cookieyes" async type="text/javascript" src="https://cdn-cookieyes.com/client_data/b0872fcf9e2c426859698b10be285be4/script.js"></script>
   <!-- End cookieyes banner -->
-  
 
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <title>Hash Generator & Encoders — MD5, SHA-1, SHA-256, SHA-512, Base64, URL Encode (Free)</title>
   <meta name="description" content="Free hash generator and encoder/decoder tools. Generate MD5, SHA-1, SHA-256, SHA-384, SHA-512, HMAC-SHA256. Base64 encode/decode, URL encode/decode, Hex, HTML entities, ROT13, and JWT decode. Runs locally in your browser — no uploads." />
+  <meta name="robots" content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1" />
   <link rel="canonical" href="https://surewhynot.app/hash-generator.html">
 
   <meta property="og:type" content="website">
+  <meta property="og:site_name" content="SureWhyNot">
+  <meta property="og:locale" content="en_US">
   <meta property="og:title" content="Hash Generator & Encoders (Free, Client-Side)">
   <meta property="og:description" content="MD5/SHA hashes, HMAC, Base64, URL/Hex/HTML encoders, ROT13, JWT decode — runs in your browser.">
   <meta property="og:url" content="https://surewhynot.app/hash-generator.html">
+
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="Hash Generator & Encoders (Free, Client-Side)">
+  <meta name="twitter:description" content="MD5/SHA hashes, HMAC, Base64, URL/Hex/HTML encoders, ROT13, JWT decode — runs in your browser.">
 
   <link rel="stylesheet" href="/assets/site.css">
 
@@ -29,6 +35,8 @@
     "applicationCategory": "DeveloperApplication",
     "operatingSystem": "Web",
     "url": "https://surewhynot.app/hash-generator.html",
+    "isAccessibleForFree": true,
+    "offers": { "@type": "Offer", "price": "0", "priceCurrency": "USD" },
     "description": "Free hash generator and encoder/decoder tools: MD5, SHA-1, SHA-256, SHA-384, SHA-512, HMAC-SHA256, Base64, URL, Hex, HTML entities, ROT13, JWT decode. Runs locally in the browser."
   }
   </script>
@@ -82,16 +90,16 @@
     select.in { cursor:pointer; }
     .hint { font-size:12px; color:var(--muted); line-height:1.5; }
   </style>
-  
+
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7167291111213614"
      crossorigin="anonymous"></script>
-	
+
   <link rel="icon" href="/favicon.ico" sizes="any">
   <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
   <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
   <link rel="manifest" href="/site.webmanifest">
-	
+
 </head>
 
 <body>
@@ -112,6 +120,10 @@
 
               <div class="muted" style="margin-top:10px">
                 MD5, SHA-1, SHA-256, SHA-384, SHA-512, HMAC-SHA256 · Base64 · URL · Hex · HTML entities · ROT13 · JWT decode.
+              </div>
+
+              <div class="muted" style="margin-top:10px">
+                Paste input, pick a mode, and get results instantly — everything runs in your browser.
               </div>
 
               <div class="hr"></div>
