log explorer SEO update

--- a/log-explorer.html
+++ b/log-explorer.html
@@ -2,22 +2,32 @@
 <html lang="en">
 <head>
 
-  <!-- Start cookieyes banner --> 
-   <script id="cookieyes" async type="text/javascript" src="https://cdn-cookieyes.com/client_data/b0872fcf9e2c426859698b10be285be4/script.js"></script> 
+  <!-- Start cookieyes banner -->
+  <script id="cookieyes" async type="text/javascript" src="https://cdn-cookieyes.com/client_data/b0872fcf9e2c426859698b10be285be4/script.js"></script>
   <!-- End cookieyes banner -->
-  
+
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Log Explorer — Parse, Search, Filter, Aggregate Logs (Free)</title>
-  <meta name="description" content="Free client-side log explorer: parse logs/NDJSON, search (AND/OR, field:value), filter by time/level, aggregate counts, and export JSON/CSV. Runs locally in your browser — no uploads." />
+  <title>Log Explorer — Parse, Search, Filter, Aggregate & Export Logs (Free)</title>
+  <meta name="description" content="Free client-side log explorer to parse .log/.txt/NDJSON, search (AND/OR, field:value), filter by time/level, aggregate counts, and export JSON/CSV. Runs locally in your browser — no uploads." />
   <link rel="canonical" href="https://surewhynot.app/log-explorer.html" />
   <meta name="robots" content="index,follow" />
 
+  <!-- Open Graph -->
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Log Explorer (Free, Client-Side)" />
+  <meta property="og:site_name" content="surewhynot.app" />
+  <meta property="og:title" content="Log Explorer — Parse, Search, Filter, Aggregate & Export Logs (Free)" />
   <meta property="og:description" content="Parse logs/NDJSON locally. Search, filter, aggregate, export JSON/CSV. No uploads." />
   <meta property="og:url" content="https://surewhynot.app/log-explorer.html" />
+
+  <!-- Twitter / X -->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="Log Explorer — Parse, Search, Filter, Aggregate & Export Logs (Free)" />
+  <meta name="twitter:description" content="Parse logs/NDJSON locally. Search, filter, aggregate, export JSON/CSV. No uploads." />
+
+  <!-- Optional: Helpful for SERP display on some platforms -->
+  <meta name="theme-color" content="#0b0f14" />
 
   <script type="application/ld+json">
   {
@@ -27,7 +37,8 @@
     "applicationCategory": "DeveloperApplication",
     "operatingSystem": "Web",
     "url": "https://surewhynot.app/log-explorer.html",
-    "description": "Free client-side log explorer: parse logs/NDJSON, search, filter, aggregate, and export JSON/CSV. Runs locally in your browser — no uploads."
+    "description": "Free client-side log explorer: parse logs/NDJSON, search (AND/OR, field:value), filter by time/level, aggregate counts, and export JSON/CSV. Runs locally in your browser — no uploads.",
+    "offers": { "@type": "Offer", "price": "0", "priceCurrency": "USD" }
   }
   </script>
 
@@ -176,7 +187,7 @@
                 Parse common formats (JSON lines, key=value, syslog-ish). Filter by time range, severity, and simple queries.
                 Export results as JSON or CSV.
               </div>
-              
+
             </div>
           </section>
 
